// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`native-chat launch parity > claude floating fresh 1`] = `
{
  "child": {
    "args": [
      "--output-format",
      "stream-json",
      "--verbose",
      "--input-format",
      "stream-json",
      "--permission-prompt-tool",
      "stdio",
      "--setting-sources=user,project,local",
      "--permission-mode",
      "default",
      "--include-partial-messages",
      "--add-dir",
      "/parity/extra",
      "--add-dir",
      "<root>/state/agent-session-attachments",
      "--add-dir",
      "<root>/state/native-chat-visuals/993224b4fe85990df64db926ca5c0346",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "--session-id=ef4c28b6-1b32-45ba-8fec-d9ebb4e9bc59",
      "--replay-user-messages",
      "--thinking-display",
      "summarized",
    ],
    "command": "<root>/bin/claude",
    "cwd": "<root>/floating",
    "env": {
      "CLAUDE_AGENT_SDK_VERSION": "<dependency>",
      "CLAUDE_CODE_EMIT_SESSION_STATE_EVENTS": "1",
      "CLAUDE_CODE_ENTRYPOINT": "sdk-ts",
      "CLAUDE_CODE_SDK_READS_SESSION_STATE": "1",
      "CLAUDE_CONFIG_DIR": "<root>/accounts/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000003",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/993224b4fe85990df64db926ca5c0346",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "claude",
      "PATH": "<root>/bin:<root>/orca-cli/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end-and-sigterm",
      "cwd": "<root>/floating",
      "lifetime": "session",
      "nodeEnv": {},
    },
  },
  "launchPosture": {},
  "pinnedLaunchDirectories": [
    "<root>/floating",
  ],
}
`;

exports[`native-chat launch parity > claude floating resumed 1`] = `
{
  "child": {
    "args": [
      "--output-format",
      "stream-json",
      "--verbose",
      "--input-format",
      "stream-json",
      "--permission-prompt-tool",
      "stdio",
      "--resume=00000000-0000-4000-8000-000000000004",
      "--setting-sources=user,project,local",
      "--permission-mode",
      "default",
      "--include-partial-messages",
      "--add-dir",
      "/parity/extra",
      "--add-dir",
      "<root>/state/agent-session-attachments",
      "--add-dir",
      "<root>/state/native-chat-visuals/008bf60b9309e6141ae7eb98acb2a35d",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "--replay-user-messages",
      "--thinking-display",
      "summarized",
    ],
    "command": "<root>/bin/claude",
    "cwd": "<root>/floating-pinned",
    "env": {
      "CLAUDE_AGENT_SDK_VERSION": "<dependency>",
      "CLAUDE_CODE_EMIT_SESSION_STATE_EVENTS": "1",
      "CLAUDE_CODE_ENTRYPOINT": "sdk-ts",
      "CLAUDE_CODE_SDK_READS_SESSION_STATE": "1",
      "CLAUDE_CONFIG_DIR": "<root>/accounts/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000004",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/008bf60b9309e6141ae7eb98acb2a35d",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "claude",
      "PATH": "<root>/bin:<root>/orca-cli/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end-and-sigterm",
      "cwd": "<root>/floating-pinned",
      "lifetime": "session",
      "nodeEnv": {},
    },
  },
  "launchPosture": {},
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > claude worktree fresh 1`] = `
{
  "child": {
    "args": [
      "--output-format",
      "stream-json",
      "--verbose",
      "--input-format",
      "stream-json",
      "--permission-prompt-tool",
      "stdio",
      "--setting-sources=user,project,local",
      "--permission-mode",
      "default",
      "--include-partial-messages",
      "--add-dir",
      "/parity/extra",
      "--add-dir",
      "<root>/state/agent-session-attachments",
      "--add-dir",
      "<root>/state/native-chat-visuals/11e594f481958c10e3015d0bf0447a22",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "--session-id=f00702b6-4b6d-4a6c-b685-4215832dab6b",
      "--replay-user-messages",
      "--thinking-display",
      "summarized",
    ],
    "command": "<root>/bin/claude",
    "cwd": "<root>/worktree",
    "env": {
      "CLAUDE_AGENT_SDK_VERSION": "<dependency>",
      "CLAUDE_CODE_EMIT_SESSION_STATE_EVENTS": "1",
      "CLAUDE_CODE_ENTRYPOINT": "sdk-ts",
      "CLAUDE_CODE_SDK_READS_SESSION_STATE": "1",
      "CLAUDE_CONFIG_DIR": "<root>/accounts/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000001",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/11e594f481958c10e3015d0bf0447a22",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "claude",
      "PATH": "<root>/bin:<root>/orca-cli/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end-and-sigterm",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {},
    },
  },
  "launchPosture": {},
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > claude worktree fresh configured 1`] = `
{
  "child": {
    "args": [
      "--output-format",
      "stream-json",
      "--verbose",
      "--input-format",
      "stream-json",
      "--permission-prompt-tool",
      "stdio",
      "--setting-sources=user,project,local",
      "--permission-mode",
      "default",
      "--include-partial-messages",
      "--add-dir",
      "/parity/configured",
      "--add-dir",
      "<root>/state/agent-session-attachments",
      "--add-dir",
      "<root>/state/native-chat-visuals/eaed3477e8b61885d231829e3d12e45d",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "--session-id=942320a9-dfba-44e2-983c-202bdc54c4c5",
      "--replay-user-messages",
      "--dangerously-skip-permissions",
      "--thinking-display",
      "summarized",
    ],
    "command": "<root>/custom-bin/claude-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_AGENT_SDK_VERSION": "<dependency>",
      "CLAUDE_CODE_EMIT_SESSION_STATE_EVENTS": "1",
      "CLAUDE_CODE_ENTRYPOINT": "sdk-ts",
      "CLAUDE_CODE_SDK_READS_SESSION_STATE": "1",
      "CLAUDE_CONFIG_DIR": "<root>/accounts/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000031",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/eaed3477e8b61885d231829e3d12e45d",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "claude-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end-and-sigterm",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {},
    },
  },
  "launchPosture": {},
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > claude worktree fresh worker 1`] = `
{
  "child": {
    "args": [
      "--output-format",
      "stream-json",
      "--verbose",
      "--input-format",
      "stream-json",
      "--permission-prompt-tool",
      "stdio",
      "--setting-sources=user,project,local",
      "--permission-mode",
      "default",
      "--include-partial-messages",
      "--add-dir",
      "/parity/extra",
      "--add-dir",
      "<root>/state/agent-session-attachments",
      "--session-id=605d826f-82d0-4002-8f87-818cdfd51395",
      "--replay-user-messages",
      "--thinking-display",
      "summarized",
    ],
    "command": "<root>/bin/claude",
    "cwd": "<root>/worktree",
    "env": {
      "CLAUDE_AGENT_SDK_VERSION": "<dependency>",
      "CLAUDE_CODE_EMIT_SESSION_STATE_EVENTS": "1",
      "CLAUDE_CODE_ENTRYPOINT": "sdk-ts",
      "CLAUDE_CODE_SDK_READS_SESSION_STATE": "1",
      "CLAUDE_CONFIG_DIR": "<root>/accounts/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000005",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "structworker_00000000-0000-4000-8000-000000000005",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "claude",
      "PATH": "<root>/bin:<root>/orca-cli/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end-and-sigterm",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {},
    },
  },
  "launchPosture": {},
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > claude worktree resumed 1`] = `
{
  "child": {
    "args": [
      "--output-format",
      "stream-json",
      "--verbose",
      "--input-format",
      "stream-json",
      "--permission-prompt-tool",
      "stdio",
      "--resume=00000000-0000-4000-8000-000000000002",
      "--setting-sources=user,project,local",
      "--permission-mode",
      "default",
      "--include-partial-messages",
      "--add-dir",
      "/parity/extra",
      "--add-dir",
      "<root>/state/agent-session-attachments",
      "--add-dir",
      "<root>/state/native-chat-visuals/e79acd97ac88086665d85a762f43d533",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "--replay-user-messages",
      "--thinking-display",
      "summarized",
    ],
    "command": "<root>/bin/claude",
    "cwd": "<root>/worktree",
    "env": {
      "CLAUDE_AGENT_SDK_VERSION": "<dependency>",
      "CLAUDE_CODE_EMIT_SESSION_STATE_EVENTS": "1",
      "CLAUDE_CODE_ENTRYPOINT": "sdk-ts",
      "CLAUDE_CODE_SDK_READS_SESSION_STATE": "1",
      "CLAUDE_CONFIG_DIR": "<root>/accounts/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000002",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/e79acd97ac88086665d85a762f43d533",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "claude",
      "PATH": "<root>/bin:<root>/orca-cli/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end-and-sigterm",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {},
    },
  },
  "launchPosture": {},
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > claude worktree resumed configured 1`] = `
{
  "child": {
    "args": [
      "--output-format",
      "stream-json",
      "--verbose",
      "--input-format",
      "stream-json",
      "--permission-prompt-tool",
      "stdio",
      "--resume=00000000-0000-4000-8000-000000000032",
      "--setting-sources=user,project,local",
      "--permission-mode",
      "default",
      "--include-partial-messages",
      "--add-dir",
      "/parity/configured",
      "--add-dir",
      "<root>/state/agent-session-attachments",
      "--add-dir",
      "<root>/state/native-chat-visuals/b0c5ad35009f2e02d85f43df8b152891",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "--replay-user-messages",
      "--dangerously-skip-permissions",
      "--thinking-display",
      "summarized",
    ],
    "command": "<root>/custom-bin/claude-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_AGENT_SDK_VERSION": "<dependency>",
      "CLAUDE_CODE_EMIT_SESSION_STATE_EVENTS": "1",
      "CLAUDE_CODE_ENTRYPOINT": "sdk-ts",
      "CLAUDE_CODE_SDK_READS_SESSION_STATE": "1",
      "CLAUDE_CONFIG_DIR": "<root>/accounts/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000032",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/b0c5ad35009f2e02d85f43df8b152891",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "claude-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end-and-sigterm",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {},
    },
  },
  "launchPosture": {},
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > codex floating fresh 1`] = `
{
  "child": {
    "args": [
      "-c",
      "model_reasoning_effort=high",
      "app-server",
    ],
    "command": "<root>/bin/codex",
    "cwd": "<root>/floating",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "<root>/accounts/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000008",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/fe9eeff554ea6c98aca483076d97614a",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "codex",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "permissionPolicy": {
      "approvalPolicy": "on-request",
      "sandbox": "workspace-write",
    },
  },
  "pinnedLaunchDirectories": [
    "<root>/floating",
  ],
}
`;

exports[`native-chat launch parity > codex floating resumed 1`] = `
{
  "child": {
    "args": [
      "-c",
      "model_reasoning_effort=high",
      "app-server",
    ],
    "command": "<root>/bin/codex",
    "cwd": "<root>/floating-pinned",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "<root>/accounts/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000009",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/f3e028aaa6530055f01a5e1e849f6765",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "codex",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating-pinned",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "permissionPolicy": {
      "approvalPolicy": "on-request",
      "sandbox": "workspace-write",
    },
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > codex worktree fresh 1`] = `
{
  "child": {
    "args": [
      "-c",
      "model_reasoning_effort=high",
      "app-server",
    ],
    "command": "<root>/bin/codex",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "<root>/accounts/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000006",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/a8353ed0bde97e7845f0996d60267ea5",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "codex",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "permissionPolicy": {
      "approvalPolicy": "on-request",
      "sandbox": "workspace-write",
    },
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > codex worktree fresh configured 1`] = `
{
  "child": {
    "args": [
      "-c",
      "model_reasoning_effort=low",
      "app-server",
    ],
    "command": "<root>/custom-bin/codex-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "<root>/accounts/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000033",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/0a57e3c82f8be1ecdb1249602bb0e48d",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "codex-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "permissionPolicy": {
      "approvalPolicy": "never",
      "sandbox": "danger-full-access",
    },
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > codex worktree fresh worker 1`] = `
{
  "child": {
    "args": [
      "-c",
      "model_reasoning_effort=high",
      "app-server",
    ],
    "command": "<root>/bin/codex",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "<root>/accounts/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000010",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "structworker_00000000-0000-4000-8000-000000000010",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "codex",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_CHAT_VISUALS_DIR",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "permissionPolicy": {
      "approvalPolicy": "on-request",
      "sandbox": "workspace-write",
    },
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > codex worktree resumed 1`] = `
{
  "child": {
    "args": [
      "-c",
      "model_reasoning_effort=high",
      "app-server",
    ],
    "command": "<root>/bin/codex",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "<root>/accounts/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000007",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/6b7be92641aec20b00f9c40280433e0a",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "codex",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "permissionPolicy": {
      "approvalPolicy": "on-request",
      "sandbox": "workspace-write",
    },
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > codex worktree resumed configured 1`] = `
{
  "child": {
    "args": [
      "-c",
      "model_reasoning_effort=low",
      "app-server",
    ],
    "command": "<root>/custom-bin/codex-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "<root>/accounts/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_HOOK_ENDPOINT": "parent-orca_agent_hook_endpoint",
      "ORCA_AGENT_HOOK_ENV": "parent-orca_agent_hook_env",
      "ORCA_AGENT_HOOK_PORT": "parent-orca_agent_hook_port",
      "ORCA_AGENT_HOOK_TOKEN": "parent-orca_agent_hook_token",
      "ORCA_AGENT_HOOK_TRANSPORT": "parent-orca_agent_hook_transport",
      "ORCA_AGENT_HOOK_VERSION": "parent-orca_agent_hook_version",
      "ORCA_AGENT_LAUNCH": "parent-scrub-safe-launch",
      "ORCA_AGENT_LAUNCH_TOKEN": "parent-launch-token",
      "ORCA_AGENT_PANE": "parent-scrub-safe-pane",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000034",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/4c105fab16e20f574f686cfe2d55d927",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS": "parent-orca_claude_agent_status_settings",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_PANE_KEY": "tab_parent:parent-pane",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TAB_ID": "tab_parent",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "ORCA_WORKTREE_ID": "parent-worktree",
      "PARITY_OVERLAY": "codex-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "permissionPolicy": {
      "approvalPolicy": "never",
      "sandbox": "danger-full-access",
    },
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > grok floating fresh 1`] = `
{
  "child": {
    "args": [
      "agent",
      "--always-approve",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "stdio",
    ],
    "command": "<root>/bin/grok",
    "cwd": "<root>/floating",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "GROK_HOME": "<root>/accounts/grok",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000013",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/205832d622938c215d9919d8002db900",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "grok",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [
    "<root>/floating",
  ],
}
`;

exports[`native-chat launch parity > grok floating resumed 1`] = `
{
  "child": {
    "args": [
      "agent",
      "--always-approve",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "stdio",
    ],
    "command": "<root>/bin/grok",
    "cwd": "<root>/floating-pinned",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "GROK_HOME": "<root>/accounts/grok",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000014",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/ccd97507ebec4aa1657cda85a2bfc454",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "grok",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating-pinned",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > grok worktree fresh 1`] = `
{
  "child": {
    "args": [
      "agent",
      "--always-approve",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "stdio",
    ],
    "command": "<root>/bin/grok",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "GROK_HOME": "<root>/accounts/grok",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000011",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/dd7df116468181b64e6126c7fec56f82",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "grok",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > grok worktree fresh configured 1`] = `
{
  "child": {
    "args": [
      "agent",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "stdio",
    ],
    "command": "<root>/custom-bin/grok-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "GROK_HOME": "<root>/accounts/grok",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000035",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/4c6c945b7f4f83e068aec56a1037f603",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "grok-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > grok worktree fresh worker 1`] = `
{
  "child": {
    "args": [
      "agent",
      "--always-approve",
      "stdio",
    ],
    "command": "<root>/bin/grok",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "GROK_HOME": "<root>/accounts/grok",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000015",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "structworker_00000000-0000-4000-8000-000000000015",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "grok",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CHAT_VISUALS_DIR",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > grok worktree resumed 1`] = `
{
  "child": {
    "args": [
      "agent",
      "--always-approve",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "stdio",
    ],
    "command": "<root>/bin/grok",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "GROK_HOME": "<root>/accounts/grok",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000012",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/5ba39b7cfa537ea49862ef2aa91047d0",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "grok",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > grok worktree resumed configured 1`] = `
{
  "child": {
    "args": [
      "agent",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
      "stdio",
    ],
    "command": "<root>/custom-bin/grok-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "GROK_HOME": "<root>/accounts/grok",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000036",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/4513a9571ec9fe3b6c2cee8782d16d37",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "grok-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > omp floating fresh 1`] = `
{
  "child": {
    "args": [
      "acp",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
    ],
    "command": "<root>/bin/omp",
    "cwd": "<root>/floating",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000023",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/04e2e3dee61c2161997f73ad32af9fad",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "omp",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/omp",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [
    "<root>/floating",
  ],
}
`;

exports[`native-chat launch parity > omp floating resumed 1`] = `
{
  "child": {
    "args": [
      "acp",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
    ],
    "command": "<root>/bin/omp",
    "cwd": "<root>/floating-pinned",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000024",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/52b586c587fa58fc8ce47971e57d8d10",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "omp",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/omp",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating-pinned",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > omp worktree fresh 1`] = `
{
  "child": {
    "args": [
      "acp",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
    ],
    "command": "<root>/bin/omp",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000021",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/a28c50c0e7e8aef4cef08e0d88a19f2d",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "omp",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/omp",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > omp worktree fresh configured 1`] = `
{
  "child": {
    "args": [
      "acp",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
    ],
    "command": "<root>/custom-bin/omp-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000039",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/7eca093e243e678793121c8537d04cc0",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "omp-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/omp",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > omp worktree fresh worker 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/bin/omp",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000025",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "structworker_00000000-0000-4000-8000-000000000025",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "omp",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/omp",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CHAT_VISUALS_DIR",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > omp worktree resumed 1`] = `
{
  "child": {
    "args": [
      "acp",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
    ],
    "command": "<root>/bin/omp",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000022",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/c9a6a6942b3dd2bfaf1304d9bf0db2bc",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "omp",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/omp",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > omp worktree resumed configured 1`] = `
{
  "child": {
    "args": [
      "acp",
      "--plugin-dir",
      "<repo>/resources/native-chat-visuals",
    ],
    "command": "<root>/custom-bin/omp-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000040",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/3d37237436bb2343509e2f2d6240ec5c",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "omp-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/omp",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > opencode floating fresh 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/bin/opencode",
    "cwd": "<root>/floating",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "OPENCODE_CLIENT": "acp",
      "OPENCODE_CONFIG_CONTENT": "{"skills":{"paths":["<repo>/resources/native-chat-visuals/skills"]}}",
      "OPENCODE_ENABLE_QUESTION_TOOL": "false",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000018",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/d8b72865af2aa80c73fb957764c415b2",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "opencode",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "OPENCODE_AUTH_CONTENT",
      "OPENCODE_CONFIG_DIR",
      "OPENCODE_DB",
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_DATA_ACCOUNT_PROVIDER",
      "ORCA_OPENCODE_CONFIG_DIR",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
      "XDG_DATA_HOME",
      "XDG_STATE_HOME",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [
    "<root>/floating",
  ],
}
`;

exports[`native-chat launch parity > opencode floating resumed 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/bin/opencode",
    "cwd": "<root>/floating-pinned",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "OPENCODE_CLIENT": "acp",
      "OPENCODE_CONFIG_CONTENT": "{"skills":{"paths":["<repo>/resources/native-chat-visuals/skills"]}}",
      "OPENCODE_ENABLE_QUESTION_TOOL": "false",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000019",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/142777cee33f20ee78b32b50361f8e9c",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "opencode",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "OPENCODE_AUTH_CONTENT",
      "OPENCODE_CONFIG_DIR",
      "OPENCODE_DB",
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_DATA_ACCOUNT_PROVIDER",
      "ORCA_OPENCODE_CONFIG_DIR",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
      "XDG_DATA_HOME",
      "XDG_STATE_HOME",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating-pinned",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > opencode worktree fresh 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/bin/opencode",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "OPENCODE_CLIENT": "acp",
      "OPENCODE_CONFIG_CONTENT": "{"skills":{"paths":["<repo>/resources/native-chat-visuals/skills"]}}",
      "OPENCODE_ENABLE_QUESTION_TOOL": "false",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000016",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/1ebe6393ce8358dbebca3fa0236d990c",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "opencode",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "OPENCODE_AUTH_CONTENT",
      "OPENCODE_CONFIG_DIR",
      "OPENCODE_DB",
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_DATA_ACCOUNT_PROVIDER",
      "ORCA_OPENCODE_CONFIG_DIR",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
      "XDG_DATA_HOME",
      "XDG_STATE_HOME",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > opencode worktree fresh configured 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/custom-bin/opencode-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "OPENCODE_CLIENT": "acp",
      "OPENCODE_CONFIG_CONTENT": "{"skills":{"paths":["<repo>/resources/native-chat-visuals/skills"]}}",
      "OPENCODE_ENABLE_QUESTION_TOOL": "false",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000037",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/083c5a4185dc6c2750d599f361c671d1",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "opencode-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "OPENCODE_AUTH_CONTENT",
      "OPENCODE_CONFIG_DIR",
      "OPENCODE_DB",
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_DATA_ACCOUNT_PROVIDER",
      "ORCA_OPENCODE_CONFIG_DIR",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
      "XDG_DATA_HOME",
      "XDG_STATE_HOME",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > opencode worktree fresh worker 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/bin/opencode",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "OPENCODE_CLIENT": "acp",
      "OPENCODE_ENABLE_QUESTION_TOOL": "false",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000020",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "structworker_00000000-0000-4000-8000-000000000020",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "opencode",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "OPENCODE_AUTH_CONTENT",
      "OPENCODE_CONFIG_DIR",
      "OPENCODE_DB",
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CHAT_VISUALS_DIR",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_DATA_ACCOUNT_PROVIDER",
      "ORCA_OPENCODE_CONFIG_DIR",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
      "XDG_DATA_HOME",
      "XDG_STATE_HOME",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > opencode worktree resumed 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/bin/opencode",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "OPENCODE_CLIENT": "acp",
      "OPENCODE_CONFIG_CONTENT": "{"skills":{"paths":["<repo>/resources/native-chat-visuals/skills"]}}",
      "OPENCODE_ENABLE_QUESTION_TOOL": "false",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000017",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/f22d18cd47801ffbd620f7a8fd45d117",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "opencode",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "OPENCODE_AUTH_CONTENT",
      "OPENCODE_CONFIG_DIR",
      "OPENCODE_DB",
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_DATA_ACCOUNT_PROVIDER",
      "ORCA_OPENCODE_CONFIG_DIR",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
      "XDG_DATA_HOME",
      "XDG_STATE_HOME",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > opencode worktree resumed configured 1`] = `
{
  "child": {
    "args": [
      "acp",
    ],
    "command": "<root>/custom-bin/opencode-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "OPENCODE_CLIENT": "acp",
      "OPENCODE_CONFIG_CONTENT": "{"skills":{"paths":["<repo>/resources/native-chat-visuals/skills"]}}",
      "OPENCODE_ENABLE_QUESTION_TOOL": "false",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000038",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "<root>/state/native-chat-visuals/9825b24d9014b859f02ff26f814792b0",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "term_parent",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "opencode-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "OPENCODE_AUTH_CONTENT",
      "OPENCODE_CONFIG_DIR",
      "OPENCODE_DB",
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_DATA_ACCOUNT_PROVIDER",
      "ORCA_OPENCODE_CONFIG_DIR",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
      "XDG_DATA_HOME",
      "XDG_STATE_HOME",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": false,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > pi floating fresh 1`] = `
{
  "child": {
    "args": [
      "--mode",
      "rpc",
    ],
    "command": "<root>/bin/pi",
    "cwd": "<root>/floating",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000028",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "/parent/visuals",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "pi",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/pi",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_TERMINAL_HANDLE",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [
    "<root>/floating",
  ],
}
`;

exports[`native-chat launch parity > pi floating resumed 1`] = `
{
  "child": {
    "args": [
      "--mode",
      "rpc",
      "--session",
      "<root>/pi-sessions/00000000-0000-4000-8000-000000000029.jsonl",
    ],
    "command": "<root>/bin/pi",
    "cwd": "<root>/floating-pinned",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000029",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "/parent/visuals",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "pi",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/pi",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_TERMINAL_HANDLE",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/floating-pinned",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > pi worktree fresh 1`] = `
{
  "child": {
    "args": [
      "--mode",
      "rpc",
    ],
    "command": "<root>/bin/pi",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000026",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "/parent/visuals",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "pi",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/pi",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_TERMINAL_HANDLE",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > pi worktree fresh configured 1`] = `
{
  "child": {
    "args": [
      "--mode",
      "rpc",
    ],
    "command": "<root>/custom-bin/pi-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000041",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "/parent/visuals",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "pi-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/pi",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_TERMINAL_HANDLE",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > pi worktree fresh worker 1`] = `
{
  "child": {
    "args": [
      "--mode",
      "rpc",
    ],
    "command": "<root>/bin/pi",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000030",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "/parent/visuals",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_TERMINAL_HANDLE": "structworker_00000000-0000-4000-8000-000000000030",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "pi",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/pi",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > pi worktree resumed 1`] = `
{
  "child": {
    "args": [
      "--mode",
      "rpc",
      "--session",
      "<root>/pi-sessions/00000000-0000-4000-8000-000000000027.jsonl",
    ],
    "command": "<root>/bin/pi",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "process",
      "LANG": "en_US.UTF-8",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000027",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "/parent/visuals",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "pi",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/pi",
      "SHELL_ONLY": "shell",
      "SHELL_UNLISTED": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_TERMINAL_HANDLE",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;

exports[`native-chat launch parity > pi worktree resumed configured 1`] = `
{
  "child": {
    "args": [
      "--mode",
      "rpc",
      "--session",
      "<root>/pi-sessions/00000000-0000-4000-8000-000000000042.jsonl",
    ],
    "command": "<root>/custom-bin/pi-custom",
    "cwd": "<root>/worktree",
    "env": {
      "ANTHROPIC_API_KEY": "parent-api-key",
      "CLAUDE_CODE_SESSION_ID": "parent-claude-session",
      "CLAUDE_CONFIG_DIR": "/parent/claude",
      "CODEX_HOME": "/parent/codex",
      "HOME": "<root>/home",
      "INHERITED_ONLY": "overlay",
      "LANG": "C",
      "ORCA_AGENT_SESSION_ID": "00000000-0000-4000-8000-000000000042",
      "ORCA_AGENT_SESSION_SPAWN_TOKEN": "parity-spawn-token",
      "ORCA_CHAT_VISUALS_DIR": "/parent/visuals",
      "ORCA_CLI_BIN_DIR": "<root>/orca-cli/bin",
      "ORCA_CLI_COMMAND": "<root>/orca-cli/bin/orca",
      "ORCA_DATA_ACCOUNT_PROVIDER": "parent-account",
      "ORCA_OPENCODE_CONFIG_DIR": "/parent/opencode-overlay",
      "ORCA_STRUCTURED_SESSION": "1",
      "ORCA_USER_DATA_PATH": "<root>/user-data",
      "PARITY_OVERLAY": "pi-configured",
      "PATH": "<root>/orca-cli/bin:<root>/bin:/opt/login-shell/bin:/usr/bin:/bin",
      "PI_CODING_AGENT_DIR": "<root>/accounts/pi",
      "SHELL_ONLY": "shell",
    },
    "envToDelete": [
      "ORCA_AGENT_HOOK_ENDPOINT",
      "ORCA_AGENT_HOOK_ENV",
      "ORCA_AGENT_HOOK_PORT",
      "ORCA_AGENT_HOOK_TOKEN",
      "ORCA_AGENT_HOOK_TRANSPORT",
      "ORCA_AGENT_HOOK_VERSION",
      "ORCA_AGENT_LAUNCH",
      "ORCA_AGENT_LAUNCH_TOKEN",
      "ORCA_AGENT_PANE",
      "ORCA_CLAUDE_AGENT_STATUS_SETTINGS",
      "ORCA_PANE_KEY",
      "ORCA_TAB_ID",
      "ORCA_TERMINAL_HANDLE",
      "ORCA_WORKTREE_ID",
    ],
    "supervisor": {
      "closeRequest": "stdin-end",
      "cwd": "<root>/worktree",
      "lifetime": "session",
      "nodeEnv": {
        "NODE_OPTIONS": "--max-old-space-size=4096",
      },
    },
  },
  "launchPosture": {
    "fullAccess": true,
  },
  "pinnedLaunchDirectories": [],
}
`;
